--- a/styles/project.css
+++ b/styles/project.css
@@ -96,46 +96,9 @@ margin-bottom: 10px; /* Adjust as needed for spacing between items */
 
 .stockinfo {
     display: grid;
-    grid-template-columns: 50% 50%; /* Two columns each occupying 50% */
+    grid-template-columns: 1fr 1fr; /* Two columns each occupying an equal fraction */
     gap: 0px; /* Add some spacing between columns */
     width: 1000px; /* Set the fixed width of the grid */
     margin: 0; /* Remove the automatic centering and align it to the left */
     padding-bottom: 20px;
-  }
-
-
-
-/* Media Queries */
-@media only screen and (min-width: 32.5em) {
-    nav ul {
-        flex-direction: row;
-    }
-
-    nav ul li:first-child {
-        display: none;
-    }
-
-    nav ul li {
-        display: block;
-    }
-
-    section {
-        min-width: 300px;
-    }
-
-    #home {
-        margin: 100px auto 20px;
-        grid-template-columns: 250px 1fr;
-        max-width: -moz-fit-content;
-        max-width: fit-content;
-    }
-
-    #task3 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 5px;
-        margin: 0 auto;
-        max-width: 950px;
-    }
-
 }
