--- a/styles/project.css
+++ b/styles/project.css
@@ -63,42 +63,42 @@ body h3 {
 }
 
 br {
-    margin-top: 10px; /* Adjust the spacing as needed */
-    border: 100px solid #000; /* Add a border to make the line break visible */
+    margin-top: 10px; 
+    border: 100px solid #000; 
 }
 
 .textbox {
     display: flex;
-    align-items: flex-start; /* Align items to the top */
-    justify-content: flex-start; /* Align items to the start (left) */
+    align-items: flex-start; 
+    justify-content: flex-start; 
   }
   
   .logo {
-    width: 30px; /* Set the width of the image as needed */
-    height: auto; /* Maintain the aspect ratio */
-    margin-right: 10px; /* Add spacing between image and text */
-    align-self: flex-end; /* Align the logo to the bottom */
+    width: 30px; 
+    height: auto; 
+    margin-right: 10px;
+    align-self: flex-end; 
   }
 
 #historicalPriceList {
 columns: 5;
--webkit-columns: 5; /* For older versions of Chrome and Safari */
--moz-columns: 5; /* For older versions of Firefox */
-list-style: none; /* Remove default list bullet points */
-padding: 0; /* Remove padding */
-margin: 0; /* Remove margin */
+-webkit-columns: 5; 
+-moz-columns: 5; 
+list-style: none; 
+padding: 0; 
+margin: 0; 
 padding-top: 20px;
 }
 
 #historicalPriceList li {
-margin-bottom: 10px; /* Adjust as needed for spacing between items */
+margin-bottom: 10px; 
 }
 
 .stockinfo {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Two columns each occupying an equal fraction */
-    gap: 0px; /* Add some spacing between columns */
-    width: 1000px; /* Set the fixed width of the grid */
-    margin: 0; /* Remove the automatic centering and align it to the left */
+    grid-template-columns: 1fr 1fr; 
+    gap: 0px; 
+    width: 1000px; 
+    margin: 0; 
     padding-bottom: 20px;
 }
